--- a/_posts/2017-04-21-first-taste.html
+++ b/_posts/2017-04-21-first-taste.html
@@ -4,5 +4,5 @@ title: first to try git pages
 ---
 
 <h2>{{ page.title }}</h2>
-<p>我的第一篇文章</p>
+<p>我的第一篇文章(test)</p>
 <p>{{ page.date | date_to_string }}</p>
